--- a/editor/index.html
+++ b/editor/index.html
@@ -32,7 +32,7 @@
 		<script src="../examples/js/controls/TransformControls.js"></script>
 		<script src="../examples/js/loaders/BabylonLoader.js"></script>
 		<script src="../examples/js/loaders/ColladaLoader.js"></script>
-    	<script src="../examples/js/loaders/OBJLoader2.js"></script>
+    	<script src="../examples/js/loaders/OBJLoader.js"></script>
     	<script src="../examples/js/loaders/AssimpJSONLoader.js"></script>
 		<script src="../examples/js/loaders/PLYLoader.js"></script>
 		<script src="../examples/js/loaders/STLLoader.js"></script>
@@ -261,15 +261,15 @@ THREE.Face3b.prototype = {
 
 						editor.storage.set( exporter.parse( editor.scene ) );
 
-					}, 1 );
+					}, 100 );
 
 				};
 
-				//signals.objectAdded.add( saveState );
-				//signals.objectChanged.add( saveState );
-				//signals.objectRemoved.add( saveState );
-				//signals.materialChanged.add( saveState );
-				//signals.sceneGraphChanged.add( saveState );
+				signals.objectAdded.add( saveState );
+				signals.objectChanged.add( saveState );
+				signals.objectRemoved.add( saveState );
+				signals.materialChanged.add( saveState );
+				signals.sceneGraphChanged.add( saveState );
                 
 			} );
 
